2005-03-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ChooseParents.py: use integers instead of strings for 
	relationship types
	* src/PedView.py: use integers instead of strings for 
	relationship types
	* src/ReadGedcom.py: use integers instead of strings for 
	relationship types
	* src/ReadXML.py: use integers instead of strings for 
	relationship types
	* src/RelLib.py: use integers instead of strings for 
	relationship types
	* src/SelectChild.py: use integers instead of strings for 
	relationship types
	* src/WriteXML.py: use integers instead of strings for 
	relationship types
	* src/const.py.in: use integers instead of strings for 
	relationship types
	* src/gramps_main.py: call database update function
	* src/GrampsBSDDB.py: add database upgrade function
	* src/GrampsDbBase.py: add database upgrade function
	* src/Marriage.py: fix lds menu
	* src/AddSpouse.py: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships
	* src/ChooseParents.py: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships
	* src/FamilyView.py: use ModifyParents instead of EditRel
	* src/SelectChild.py: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships. Remove EditRel class
	* src/gramps.glade: use ComboBox instead of ComboBoxEntry for
	handling child/parent relationships, delete editrel

2005-03-02 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py (ImportDbPrompter.chooser): Explicitly
	import XML and GEDCOM.
	* src/plugins/FilterEditor.py (MySelect.get_text): Typo.

	* src/plugins/FilterEditor.py: Multiple fixes.
	* src/GenericFilter.py: Multiple fixes.

	* src/plugins/Makefile.am: Stop shipping ReadNative.py.

2005-02-27 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py (format_maker): Add mnemonic activation target
	to the format selector label; Use new import format; don't treat
	native formats as plugins anymore.